--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </nav>
 
   <div id="hero">
-    <h1 class="big-heading">Jackson Wong</h1>
-    <h2 class="big-heading">Computer Science student at UC Berkeley.</h2>
+    <h1>Jackson Wong</h1>
+    <h2>Computer Science student at UC Berkeley.</h2>
     <br>
     <button>
       <p>Contact me!</p>
