--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Jackson's Personal Website</title>
+  <author>Jackson Wong</author>
 </head>
 <body>
   <nav class="navbar">
@@ -24,25 +25,39 @@
     <h2>Computer Science student at UC Berkeley.</h2>
     <br>
     <button>
-      <p>Contact me!</p>
+      <p><a href="#contact">Contact me!</a></p>
     </button>
   </div>
 
   <div class="content" id="about">
     <h3>About Me</h3>
-    <p>I'm Jackson and I was born and raised in Berkeley, California. I now study Computer Science at UC Berkeley and am currently focused on learning fullstack software development. I am and am pursuing opportunities for the summer 2023!
-    <br>When I am not studying computer science I am playing <a href="#music">slack key guitar</a>, transposing Hawaiian music, and hooping.</p>
+    <p>I'm Jackson and I was born and raised in Berkeley, California. I now study Computer Science at UC Berkeley and am focused on learning fullstack software development. Currently I'm pursuing opportunities for the summer 2023!</p>
+    <br>
+    <p>When I am not studying computer science I am playing <a href="https://www.dancingcat.com/section-1-history" target="_blank">slack key guitar</a>, transposing Hawaiian music, and hooping.</p>
   </div>  
   
   <div class="content" id="projects">
     <h2>Projects</h2>
-    <h3>This website</h3>
-    <p>This website is my first personal project and hopefully the place where I will showcase many more!</p>
+    <div class="projects">
+      <div class="project">
+        <p><img src="./images/folder.png" height="80">Personal Website</p>
+      </div>
+      <div class="project">
+        <p><img src="./images/folder.png" height="80">Project</p>
+      </div>
+      <div class="project">
+        <p><img src="./images/folder.png" height="80">Project</p>
+      </div>
+      <div class="project">
+        <p><img src="./images/folder.png" height="80">Project</p>
+      </div>
+    </div> 
   </div>
   
   <div class="content" id="experience">
     <h2>Experience</h2>
-    <h3>Intern at Livetree Community Unlimited</h3>
+
+    <h3>1. <em>Intern</em> at Livetree Community Limited</h3>
     <h4>June 2022 - August 2022</h4>
     <h4>London, United Kingdom</h4>
     <ul>
@@ -53,14 +68,38 @@
         Reduced marketing research time from 2+ hours down to 5 minutes using web scraping with Selenium in Python.
       </li>
     </ul>
+
+    <h3>2. <em>Instructor</em> at Robotics for Fun</h3>
+    <h4>2019 - 2020</h4>
+    <h4>Oakland, California</h4>
+    <ul>
+      <li>
+        Led weekend workshops teaching kids how to design, build and program robots using metal, plastic, and cardboard materials.
+      </li>
+      <li>
+        Designed projects for students and developed the robotics and C# programming curriculum.
+      </li>
+    </ul>
   </div>
 
   <div class="content" id="music">
   <h2>Music</h2>
+  <h5>Coming Soon!</h5>
   </div>
 
   <div class="content" id="contact">
     <h2>Contact</h2>
+    <br>
+    <h6>Send me a message!</h6>
+    <form>
+      <label>First Name</label>
+      <input type="text" placeholder="First name">
+      <label>Last Name</label>
+      <input type="text" placeholder="Last name">
+      <label>Message</label>
+      <textarea placeholder="Write something.." style="height:200px"></textarea>
+      <input type="submit" value="Submit">
+    </form>
   </div>  
 </body>
 </html>
