--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <meta name="author" content="Jackson Wong">
   <title>Jackson's Personal Website</title>
-  <author>Jackson Wong</author>
 </head>
 <body>
   <nav class="navbar">
@@ -16,7 +16,11 @@
       <li><a href="#experience">Experience</a></li>
       <li><a href="#music">Music</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="#resume">Resume</a></li>
+      <li>
+        <button>
+          <p><a href="./images/JTW Resume for Internships 2023 v2.pdf">Resume</a></p>
+        </button>
+    </li>
     </ul>
   </nav>
 
