added more styling and socials

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="#contact">Contact</a></li>
       <li>
         <button>
-          <p><a href="./images/JTW Resume for Internships 2023 v2.pdf">Resume</a></p>
+          <a style="font-size:30px" href="./images/JTW Resume for Internships 2023 v2.pdf">Resume</a>
         </button>
     </li>
     </ul>
@@ -29,12 +29,13 @@
     <h2>Computer Science student at UC Berkeley.</h2>
     <br>
     <button>
-      <p><a href="#contact">Contact me!</a></p>
+      <p><a href="#contact">Contact Me</a></p>
     </button>
   </div>
 
   <div class="content" id="about">
-    <h3>About Me</h3>
+    <h2>About Me</h2>
+    <div class="header-underline"></div>
     <p>I'm Jackson and I was born and raised in Berkeley, California. I now study Computer Science at UC Berkeley and am focused on learning fullstack software development. Currently I'm pursuing opportunities for the summer 2023!</p>
     <br>
     <p>When I am not studying computer science I am playing <a href="https://www.dancingcat.com/section-1-history" target="_blank">slack key guitar</a>, transposing Hawaiian music, and hooping.</p>
@@ -42,6 +43,7 @@
   
   <div class="content" id="projects">
     <h2>Projects</h2>
+    <div class="header-underline"></div>
     <div class="projects">
       <div class="project">
         <p><img src="./images/folder.png" height="80">Personal Website</p>
@@ -60,8 +62,9 @@
   
   <div class="content" id="experience">
     <h2>Experience</h2>
+    <div class="header-underline"></div>
 
-    <h3>1. <em>Intern</em> at Livetree Community Limited</h3>
+    <h3>1. <em>Intern</em> at <a href="https://www.livetree.com/" target="_blank">Livetree Community Limited</a></h3>
     <h4>June 2022 - August 2022</h4>
     <h4>London, United Kingdom</h4>
     <ul>
@@ -73,7 +76,7 @@
       </li>
     </ul>
 
-    <h3>2. <em>Instructor</em> at Robotics for Fun</h3>
+    <h3>2. <em>Instructor</em> at <a href="https://roboticsforfun.com/" target="_blank">Robotics for Fun</a></h3>
     <h4>2019 - 2020</h4>
     <h4>Oakland, California</h4>
     <ul>
@@ -88,11 +91,13 @@
 
   <div class="content" id="music">
   <h2>Music</h2>
+  <div class="header-underline"></div>
   <h5>Coming Soon!</h5>
   </div>
 
   <div class="content" id="contact">
     <h2>Contact</h2>
+    <div class="header-underline"></div>
     <br>
     <h6>Send me a message!</h6>
     <form>
@@ -104,6 +109,18 @@
       <textarea placeholder="Write something.." style="height:200px"></textarea>
       <input type="submit" value="Submit">
     </form>
+    <div class="social">
+      <a href="mailto:wongjt@berkeley.edu" target="_blank">
+        <img src="./images/envelope.png" height="80">
+      </a>
+      <a href="https://www.linkedin.com/in/jacksontwong/" target="_blank">
+        <img src="./images/linkedin.png" height="80">
+      </a>
+      <a href="https://github.com/wongjt22" target="_blank">
+        <img src="./images/github.png" height="80">
+      </a>
+    </div>
   </div>  
+  <div class="footer">Designed and Built by Jackson Wong</div>
 </body>
 </html>
