--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
   <nav class="navbar">
     <ul>
-      <li><a href="#about">About Me</a></li>
+      <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#experience">Experience</a></li>
       <li><a href="#music">Music</a></li>
       <li><a href="#contact">Contact</a></li>
       <li>
-        <button>
-          <a style="font-size:30px" href="./images/JTW Resume for Internships 2023 v2.pdf">Resume</a>
-        </button>
+        <a style="font-size:30px" href="./images/JTW Resume for Internships 2023 v2.pdf">
+          <button>Resume</button>
+        </a>
     </li>
     </ul>
   </nav>
@@ -28,17 +28,24 @@
     <h1>Jackson Wong</h1>
     <h2>Computer Science student at UC Berkeley.</h2>
     <br>
-    <button>
-      <p><a href="#contact">Contact Me</a></p>
-    </button>
+    <a href="#contact">
+      <button>Contact Me</button>
+    </a>
   </div>
 
   <div class="content" id="about">
-    <h2>About Me</h2>
+    <h2>About</h2>
     <div class="header-underline"></div>
-    <p>I'm Jackson and I was born and raised in Berkeley, California. I now study Computer Science at UC Berkeley and am focused on learning fullstack software development. Currently I'm pursuing opportunities for the summer 2023!</p>
-    <br>
-    <p>When I am not studying computer science I am playing <a href="https://www.dancingcat.com/section-1-history" target="_blank">slack key guitar</a>, transposing Hawaiian music, and hooping.</p>
+    <div class="about-wrapper">
+      <div class="about-text">
+      <p>My name is Jackson and I was born and raised in Berkeley, California. I now study Computer Science at UC Berkeley and am focused on learning fullstack software development. Currently I'm pursuing opportunities for the summer 2023!</p>
+      <br>
+      <p>When I am not coding I am playing <a href="https://www.dancingcat.com/section-1-history" target="_blank">slack key guitar</a>, transposing Hawaiian music, and playing basketball.</p>
+      </div>
+      <div class="about-image">
+          <img src="./images/calcifer.jpeg" height="300px" style="filter: invert(0%)">
+      </div>
+    </div>
   </div>  
   
   <div class="content" id="projects">
@@ -109,15 +116,15 @@
       <textarea placeholder="Write something.." style="height:200px"></textarea>
       <input type="submit" value="Submit">
     </form>
-    <div class="social">
+    <div class="socials">
       <a href="mailto:wongjt@berkeley.edu" target="_blank">
-        <img src="./images/envelope.png" height="80">
+        <img class="social" src="./images/envelope.png" height="80">
       </a>
       <a href="https://www.linkedin.com/in/jacksontwong/" target="_blank">
-        <img src="./images/linkedin.png" height="80">
+        <img class="social" src="./images/linkedin.png" height="80">
       </a>
       <a href="https://github.com/wongjt22" target="_blank">
-        <img src="./images/github.png" height="80">
+        <img class="social" src="./images/github.png" height="80">
       </a>
     </div>
   </div>  
