Cleaned up projects

--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@
     <div class="header-underline"></div>
     <div class="projects">
       <div class="project">
-        <p><img src="./images/folder.png" height="80">Personal Website</p>
-      </div>
-      <div class="project">
-        <p><img src="./images/folder.png" height="80">Project</p>
-      </div>
-      <div class="project">
-        <p><img src="./images/folder.png" height="80">Project</p>
-      </div>
-      <div class="project">
-        <p><img src="./images/folder.png" height="80">Project</p>
+        <div class="project-header">
+          <img src="./images/folder.png" height="50">
+          <img src="./images/github.png" height="50">
+        </div>
+        <h4>Personal Website</h4>
+        <p>This website is my personal portfolio to showcase  my web development skills.</p>
+        <br>
+        <p class="skills">HTML CSS JS</p>
       </div>
     </div> 
   </div>
