--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <div class="header-underline"></div>
     <div class="about-wrapper">
       <div class="about-text">
-      <p>My name is Jackson and I was born and raised in Berkeley, California. I now study Computer Science at UC Berkeley and am focused on learning fullstack software development. Currently I'm pursuing opportunities for the summer 2023!</p>
-      <br>
+      <p>Hello! My name is Jackson and I've always enjoyed building things from scratch and solving complex problems. My interest in computer science began back in elementary school when I started making 2D platformer games with Scratch.</p>
+      <p>Today, I am a sophomore studying computer science at UC Berkeley and am focused on learning fullstack web development. I'm also currently pursuing opportunities for the summer 2023!</p>
       <p>When I am not coding I am playing <a href="https://www.dancingcat.com/section-1-history" target="_blank">slack key guitar</a>, transposing Hawaiian music, and playing basketball.</p>
       </div>
       <div class="about-image">
-          <img src="./images/calcifer.jpeg" height="300px" style="filter: invert(0%)">
+          <img src="./images/calcifer.jpeg" height="500px" style="filter: invert(0%)">
       </div>
     </div>
   </div>  
@@ -61,6 +61,26 @@
         <p>This website is my personal portfolio to showcase  my web development skills.</p>
         <br>
         <p class="skills">HTML CSS JS</p>
+      </div>
+      <div class="project">
+        <div class="project-header">
+          <img src="./images/folder.png" height="50">
+          <img src="./images/github.png" height="50">
+        </div>
+        <h4>Calculator</h4>
+        <p>Coming soon!</p>
+        <br>
+        <p class="skills">HTML CSS JS</p>
+      </div>
+      <div class="project">
+        <div class="project-header">
+          <img src="./images/folder.png" height="50">
+          <img src="./images/github.png" height="50">
+        </div>
+        <h4>Fullstack app</h4>
+        <p>Coming soon!</p>
+        <br>
+        <p class="skills">...</p>
       </div>
     </div> 
   </div>
